test/parsing/errors/useImportNeedsModule.compopts
--detailed-errors # useImportNeedsModule-detailed.good
--no-detailed-errors # useImportNeedsModule-brief.good
